@@ -81,6 +81,7 @@ New Features
   - SOLR-4033: Consistently use the solrconfig.xml lockType everywhere.
     (Mark Miller, Markus Jelsma)
   - SOLR-4144: Replication using too much RAM. (yonik, Markus Jelsma)
+  - SOLR-4187: NPE on Directory release (Mark Miller, Markus Jelsma)
     
 * SOLR-1972: Add extra statistics to RequestHandlers - 5 & 15-minute reqs/sec
   rolling averages; median, 75th, 95th, 99th, 99.9th percentile request times
